# argparse

./: CMakeLists.txt  ideas.txt  readme.md
include/argparse/: arg.hpp  argiter.hpp  argparse.hpp  impl.hpp  internal.hpp  nums.hpp  parse.hpp  print.hpp  printable.hpp
src/: argiter.cpp  argparse.cpp  nums.cpp  parse.cpp
test/: arg.cpp  argiter.cpp  argparse.cpp  demo.cpp  nums.cpp  parse.cpp  print.cpp  printable.cpp  test.cpp
test/arguse/: CMakeLists.txt  x.cpp
test/include/: argstruct.hpp
